syntax = "proto3";

package com.sokima.proto;

option java_multiple_files = true;
option java_package = "com.sokima.proto";

message ServerDto {
  string field1 = 1;
  int32 field2 = 2;
  double field3 = 3;
}

message ServerRequest {
  string field1 = 1;
}

message ServerResponse {
  repeated ServerDto serverDto = 1;
}

service ServerService {
  rpc doJob(ServerRequest) returns (ServerResponse);
}
